Fixed the wrapping

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -84,7 +84,7 @@
 }
 .container{
       display: flex;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       .list{
             flex-basis: 400px;
             background: #3F3F7C;
